--- a/my_app/src/style/mixin.less
+++ b/my_app/src/style/mixin.less
@@ -25,3 +25,9 @@
   padding-right:unit(@right/@remSize,rem); 
   padding-left:unit(@left/@remSize,rem); 
 }
+.margin(@top,@right,@bottom,@left){
+  margin-top:unit(@top/@remSize,rem); 
+  margin-bottom:unit(@bottom/@remSize,rem); 
+  margin-right:unit(@right/@remSize,rem); 
+  margin-left:unit(@left/@remSize,rem); 
+}
